WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31185
[Qt] Layout Test editing/undo/undo-deleteWord.html fails
https://bugs.webkit.org/show_bug.cgi?id=31185
Summary
[Qt] Layout Test editing/undo/undo-deleteWord.html fails
Chang Shu
Reported
2009-11-05 13:36:51 PST
Build bot reports failure on the above test case:
http://build.webkit.org/results/Qt%20Linux%20Release/r50408%20%283364%29/results.html
Attachments
fix patch
(1.35 KB, patch)
2009-11-05 13:44 PST
,
Chang Shu
no flags
Details
Formatted Diff
Diff
update after Eric's comment
(2.99 KB, patch)
2009-11-06 06:32 PST
,
Chang Shu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chang Shu
Comment 1
2009-11-05 13:44:12 PST
Created
attachment 42592
[details]
fix patch
Eric Seidel (no email)
Comment 2
2009-11-05 15:21:10 PST
Comment on
attachment 42592
[details]
fix patch This change should really have a code comment to explain what 8 and 127 are. Using nicely named constants would be even better.
Chang Shu
Comment 3
2009-11-06 06:32:00 PST
Created
attachment 42649
[details]
update after Eric's comment
Eric Seidel (no email)
Comment 4
2009-11-08 10:36:09 PST
Comment on
attachment 42649
[details]
update after Eric's comment We generally use static variables instead of #defines, but we can always change that later. cq+
WebKit Commit Bot
Comment 5
2009-11-08 10:51:33 PST
Comment on
attachment 42649
[details]
update after Eric's comment Clearing flags on attachment: 42649 Committed
r50624
: <
http://trac.webkit.org/changeset/50624
>
WebKit Commit Bot
Comment 6
2009-11-08 10:51:37 PST
All reviewed patches have been landed. Closing bug.
Chang Shu
Comment 7
2009-11-09 06:21:30 PST
(In reply to
comment #4
)
> (From update of
attachment 42649
[details]
) > We generally use static variables instead of #defines, but we can always change > that later. cq+
Will keep that in mind.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug