2009-11-08  Shu Chang  <Chang.Shu@nokia.com>

Reviewed by Holger Freyther.

        [Qt] Added support for key code 8 (backspace) in EventSenderQt.
        This helps to pass the test case below. Also replaced hardcoded
        code numbers with defined constants.
        https://bugs.webkit.org/show_bug.cgi?id=31185

        Test: editing/undo/undo-deleteWord.html

        * DumpRenderTree/qt/EventSenderQt.cpp:
        (EventSender::keyDown):

Canonical link: https://commits.webkit.org/42054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50624 268f45cc-cd09-0410-ab3c-d52691b4dbfc